правки по управлению промокодами и веб ивентами, фикс auth защиты

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -76,5 +76,7 @@
     "Найти профиль": "Find Profile",
     "Форум": "Forum",
     "Браузерные события": "Browser events",
-    "Изменить сервер": "Change server"
+    "Изменить сервер": "Change server",
+    "Поддержите Украину": "Support Ukraine",
+    "Помогите с гуманитарной помощью Украине. Россияне, не молчите! Нет войне!": "Help Provide Humanitarian Aid to Ukraine."
 }
