убраны лишние языки и поправлен вебивент компонент

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -78,5 +78,7 @@
     "Браузерные события": "Browser events",
     "Изменить сервер": "Change server",
     "Поддержите Украину": "Support Ukraine",
-    "Помогите с гуманитарной помощью Украине. Россияне, не молчите! Нет войне!": "Help Provide Humanitarian Aid to Ukraine."
+    "Помогите с гуманитарной помощью Украине. Россияне, не молчите! Нет войне!": "Help Provide Humanitarian Aid to Ukraine.",
+    "Постоянный": "Permanent",
+    "HoYoLAB Ежедневная отметка": "HoYoLAB Daily Check-In"
 }
