--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -64,5 +64,7 @@
     "Новости": "Новости",
     "Дата": "Дата",
     "Автор": "Автор",
-    "Новостей нет.": "Новостей нет."
+    "Новостей нет.": "Новостей нет.",
+    "Постоянный": "Постоянный",
+    "HoYoLAB Ежедневная отметка": "HoYoLAB Ежедневная отметка"
 }
