полностью переведен на вите и тс, подключен еслинт

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,7 +38,7 @@
     "Создать профиль": "Create a profile",
     "Забыли пароль": "Forgot your password",
     "Авторизоваться": "Sign In",
-    "Авторизация": "Authorization",
+    "Войти": "Authorization",
     "Профиль": "Profile",
     "Вы успешно авторизовались.": "You have successfully logged in.",
     "Вы успешно зарегистрировались.": "You have successfully registered.",
