--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -37,7 +37,7 @@
     "Создать профиль": "Создать профиль",
     "Забыли пароль": "Забыли пароль",
     "Авторизоваться": "Авторизоваться",
-    "Авторизация": "Авторизация",
+    "Войти": "Войти",
     "Профиль": "Профиль",
     "Вы успешно авторизовались.": "Вы успешно авторизовались.",
     "Вы успешно зарегистрировались.": "Вы успешно зарегистрировались.",
