--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -55,7 +55,8 @@
     "Изменить данные": "Изменить данные",
     "Игровое имя не может быть меньше 1 символа!": "Игровое имя не может быть меньше 1 символа!",
     "Игровое имя  не может быть больше 25 символов!": "Игровое имя  не может быть больше 25 символов!",
-    "Уровень приключений не может быть больше 2 символов!": "Уровень приключений не может быть больше 2 символов!",
+    "Уровень приключений не может быть меньше 1 уровня!": "Уровень приключений не может быть меньше 1 уровня!",
+    "Уровень приключений не может быть больше 60 уровня!": "Уровень приключений не может быть больше 60 уровня!",
     "Это поле не может быть меньше 2 символов!": "Это поле не может быть меньше 2 символов!",
     "Это поле не может быть больше 24 символов!": "Это поле не может быть больше 24 символов!",
     "Эта строка принимает только число!": "Эта строка принимает только число!",
@@ -66,5 +67,6 @@
     "Автор": "Автор",
     "Новостей нет.": "Новостей нет.",
     "Постоянный": "Постоянный",
-    "HoYoLAB Ежедневная отметка": "HoYoLAB Ежедневная отметка"
+    "HoYoLAB Ежедневная отметка": "HoYoLAB Ежедневная отметка",
+    "С 1 августа наш сайт временно переезжает на новый адрес -": "С 1 августа наш сайт временно переезжает на новый адрес -"
 }
